<resources>
    <string name="app_name">MyPosts</string>
    <string name="appname">App Name</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="gotosignin">Don\'t have an account? Sign in</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup_header_title">Enter your account information</string>
    <string name="signup_toolbar_title">Registration</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="account_exist">Already have an account</string>
    <string name="forgotmypassword">Forgot Password?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="post">Post</string>
    <string name="whatshappening">What\'s happening?</string>
    <string name="joined">Joined xx 20XX</string>
    <string name="login_success">Logged in successfully</string>
    <string name="reset_password_msg">Reset password link has been sent to your email</string>
    <string name="required_msq">Field is required</string>
    <string name="default_image"><![CDATA[https://firebasestorage.googleapis.com/v0/b/myposts-feeab.appspot.com/o/default%2Fprofile_image.png?alt=media&token=a9043418-ac8b-40bc-8ad6-a02cda07c469]]></string>
    <string name="camera_permi_required">Permission needed to access your camera</string>
    <string name="post_empty">Post is empty. Make sure you wrote your post or added a picture.</string>
    <string name="post_success">Post successfully added</string>
    <string name="at">\@</string>
    <string name="signout">Signout</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="me">/@me</string>
    <string name="username_placeholder">\@me</string>
    <string name="like_placeholder">0</string>
</resources>